--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
                 };
 
                 try {
-                    const response = await fetch('https://script.google.com/macros/s/AKfycbyNFJqdM9E_LGyxX1Tk9HleYF0cY9LoltAFEY2WM_NC5lnKEqpEqG8DYJoQPd_kYs3H/exec', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify(data)
-                    });
+                    const query = new URLSearchParams({
+                        name: data.name,
+                        mood: data.mood,
+                        comments: data.comments
+                    }).toString();
+
+                    const response = await fetch('https://script.google.com/macros/s/AKfycbyNFJqdM9E_LGyxX1Tk9HleYF0cY9LoltAFEY2WM_NC5lnKEqpEqG8DYJoQPd_kYs3H/exec?' + query);
 
                     if (response.ok) {
                         form.successMessage.classList.remove('hidden');
@@ -151,6 +151,7 @@
                         form.errorMessage.classList.remove('hidden');
                     }
                 } catch (error) {
+                    console.error(error);
                     form.errorMessage.classList.remove('hidden');
                 }
             }
