--- a/index.html
+++ b/index.html
@@ -1,161 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share Your Vibe</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #a5b4fc 0%, #e0e7ff 100%);
-        }
-        .mood-btn {
-            transition: all 0.3s ease;
-            transform: scale(1);
-            font-size: 2.5rem;
-        }
-        .mood-btn:hover {
-            transform: scale(1.2);
-        }
-        .mood-btn.selected {
-            background-color: #f0abfc;
-            border-color: #7e22ce;
-            border-width: 3px;
-            border-radius: 50%;
-        }
-        .error-message {
-            color: #dc2626;
-            font-size: 0.875rem;
-            margin-top: 0.5rem;
-        }
-        .comment-box {
-            transition: all 0.2s ease;
-        }
-        .comment-box:focus {
-            border-color: #7e22ce;
-            box-shadow: 0 0 8px rgba(126, 34, 206, 0.3);
-        }
-        .submit-btn {
-            background: linear-gradient(to right, #fb7185, #f472b6);
-        }
-        .submit-btn:hover {
-            background: linear-gradient(to right, #f43f5e, #db2777);
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Share Your Vibe</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #a5b4fc 0%, #e0e7ff 100%);
+    }
+    .mood-btn {
+      transition: all 0.3s ease;
+      transform: scale(1);
+      font-size: 2.5rem;
+    }
+    .mood-btn:hover {
+      transform: scale(1.2);
+    }
+    .mood-btn.selected {
+      background-color: #f0abfc;
+      border-color: #7e22ce;
+      border-width: 3px;
+      border-radius: 50%;
+    }
+    .error-message {
+      color: #dc2626;
+      font-size: 0.875rem;
+      margin-top: 0.5rem;
+    }
+    .comment-box {
+      transition: all 0.2s ease;
+    }
+    .comment-box:focus {
+      border-color: #7e22ce;
+      box-shadow: 0 0 8px rgba(126, 34, 206, 0.3);
+    }
+    .submit-btn {
+      background: linear-gradient(to right, #fb7185, #f472b6);
+    }
+    .submit-btn:hover {
+      background: linear-gradient(to right, #f43f5e, #db2777);
+    }
+  </style>
 </head>
 <body class="flex items-center justify-center min-h-screen px-4">
-    <div class="bg-white rounded-2xl shadow-xl p-6 sm:p-8 w-full max-w-lg">
-        <h1 class="text-3xl font-bold text-indigo-800 mb-4 text-center">Share Your Vibe!</h1>
-        <p class="text-gray-600 text-center mb-6">Tell us how you're feeling today.</p>
-        <div class="space-y-8">
-            <div>
-                <label for="name" class="block text-lg font-medium text-indigo-700 mb-2">What's your name?</label>
-                <input type="text" id="name" class="block w-full px-4 py-3 rounded-lg border border-gray-300 text-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-500 sm:text-base" placeholder="Your name (optional)">
-            </div>
-            <div class="text-center">
-                <p class="text-lg font-medium text-indigo-700 mb-3">What's your mood?</p>
-                <div class="flex justify-center gap-6 sm:gap-8">
-                    <button type="button" class="mood-btn bad p-3" data-mood="bad" title="Bad">😞</button>
-                    <button type="button" class="mood-btn meh p-3" data-mood="meh" title="Meh">😐</button>
-                    <button type="button" class="mood-btn good p-3" data-mood="good" title="Good">😊</button>
-                </div>
-                <p id="mood-error" class="error-message hidden text-center">Please pick a mood!</p>
-                <input type="hidden" id="mood" name="mood">
-            </div>
-            <div>
-                <label for="comments" class="block text-lg font-medium text-indigo-700 mb-2">What's on your mind?</label>
-                <textarea id="comments" rows="4" class="comment-box block w-full px-4 py-3 rounded-lg border border-gray-300 text-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-500 sm:text-base" placeholder="Share your thoughts..."></textarea>
-                <p id="comments-error" class="error-message hidden">Please share your thoughts!</p>
-            </div>
-            <button id="submit-btn" class="submit-btn w-full text-white py-3 px-6 rounded-lg font-semibold text-lg focus:outline-none focus:ring-2 focus:ring-pink-500 focus:ring-offset-2 transition duration-200">Send Your Vibe</button>
+  <div class="bg-white rounded-2xl shadow-xl p-6 sm:p-8 w-full max-w-lg">
+    <h1 class="text-3xl font-bold text-indigo-800 mb-4 text-center">Share Your Vibe!</h1>
+    <p class="text-gray-600 text-center mb-6">Tell us how you're feeling today.</p>
+    <div class="space-y-8">
+      <div>
+        <label for="name" class="block text-lg font-medium text-indigo-700 mb-2">What's your name?</label>
+        <input type="text" id="name" class="block w-full px-4 py-3 rounded-lg border border-gray-300 text-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-500 sm:text-base" placeholder="Your name (optional)" />
+      </div>
+      <div class="text-center">
+        <p class="text-lg font-medium text-indigo-700 mb-3">What's your mood?</p>
+        <div class="flex justify-center gap-6 sm:gap-8">
+          <button type="button" class="mood-btn bad p-3" data-mood="bad" title="Bad">😞</button>
+          <button type="button" class="mood-btn meh p-3" data-mood="meh" title="Meh">😐</button>
+          <button type="button" class="mood-btn good p-3" data-mood="good" title="Good">😊</button>
         </div>
-        <p id="success-message" class="text-green-600 text-center mt-4 font-medium hidden">Thanks for sharing your vibe!</p>
-        <p id="error-message" class="text-red-600 text-center mt-4 font-medium hidden">Failed to submit. Please try again.</p>
+        <p id="mood-error" class="error-message hidden text-center">Please pick a mood!</p>
+        <input type="hidden" id="mood" name="mood" />
+      </div>
+      <div>
+        <label for="comments" class="block text-lg font-medium text-indigo-700 mb-2">What's on your mind?</label>
+        <textarea id="comments" rows="4" class="comment-box block w-full px-4 py-3 rounded-lg border border-gray-300 text-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-500 sm:text-base" placeholder="Share your thoughts..."></textarea>
+        <p id="comments-error" class="error-message hidden">Please share your thoughts!</p>
+      </div>
+      <button id="submit-btn" class="submit-btn w-full text-white py-3 px-6 rounded-lg font-semibold text-lg focus:outline-none focus:ring-2 focus:ring-pink-500 focus:ring-offset-2 transition duration-200">Send Your Vibe</button>
     </div>
+    <p id="success-message" class="text-green-600 text-center mt-4 font-medium hidden">Thanks for sharing your vibe!</p>
+    <p id="error-message" class="text-red-600 text-center mt-4 font-medium hidden">Failed to submit. Please try again.</p>
+  </div>
 
-    <script>
-        const form = {
-            name: document.getElementById('name'),
-            mood: document.getElementById('mood'),
-            comments: document.getElementById('comments'),
-            submitBtn: document.getElementById('submit-btn'),
-            successMessage: document.getElementById('success-message'),
-            errorMessage: document.getElementById('error-message')
+  <script>
+    const form = {
+      name: document.getElementById('name'),
+      mood: document.getElementById('mood'),
+      comments: document.getElementById('comments'),
+      submitBtn: document.getElementById('submit-btn'),
+      successMessage: document.getElementById('success-message'),
+      errorMessage: document.getElementById('error-message')
+    };
+
+    const errors = {
+      mood: document.getElementById('mood-error'),
+      comments: document.getElementById('comments-error')
+    };
+
+    const moodButtons = document.querySelectorAll('.mood-btn');
+
+    moodButtons.forEach(button => {
+      button.addEventListener('click', () => {
+        moodButtons.forEach(btn => btn.classList.remove('selected'));
+        button.classList.add('selected');
+        form.mood.value = button.dataset.mood;
+        errors.mood.classList.add('hidden');
+      });
+    });
+
+    form.submitBtn.addEventListener('click', async (e) => {
+      e.preventDefault();
+      let hasError = false;
+
+      Object.values(errors).forEach(error => error.classList.add('hidden'));
+      form.comments.classList.remove('border-red-500');
+      form.successMessage.classList.add('hidden');
+      form.errorMessage.classList.add('hidden');
+
+      if (!form.mood.value) {
+        errors.mood.classList.remove('hidden');
+        hasError = true;
+      }
+
+      if (!form.comments.value.trim()) {
+        errors.comments.classList.remove('hidden');
+        form.comments.classList.add('border-red-500');
+        hasError = true;
+      }
+
+      if (!hasError) {
+        const data = {
+          name: form.name.value.trim() || 'Anonymous',
+          mood: form.mood.value,
+          comments: form.comments.value.trim()
         };
 
-        const errors = {
-            mood: document.getElementById('mood-error'),
-            comments: document.getElementById('comments-error')
-        };
+        try {
+          const response = await fetch('https://sheetdb.io/api/v1/pwyav7po06boi', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ data })
+          });
 
-        const moodButtons = document.querySelectorAll('.mood-btn');
-
-        moodButtons.forEach(button => {
-            button.addEventListener('click', () => {
-                moodButtons.forEach(btn => btn.classList.remove('selected'));
-                button.classList.add('selected');
-                form.mood.value = button.dataset.mood;
-                errors.mood.classList.add('hidden');
-            });
-        });
-
-        form.submitBtn.addEventListener('click', async (e) => {
-            e.preventDefault();
-            let hasError = false;
-
-            // Reset error states
-            Object.values(errors).forEach(error => error.classList.add('hidden'));
-            form.comments.classList.remove('border-red-500');
-            form.successMessage.classList.add('hidden');
-            form.errorMessage.classList.add('hidden');
-
-            // Validate mood
-            if (!form.mood.value) {
-                errors.mood.classList.remove('hidden');
-                hasError = true;
-            }
-
-            // Validate comments
-            if (!form.comments.value.trim()) {
-                errors.comments.classList.remove('hidden');
-                form.comments.classList.add('border-red-500');
-                hasError = true;
-            }
-
-            // If no errors, send data to Google Apps Script
-            if (!hasError) {
-                const data = {
-                    name: form.name.value.trim() || 'Anonymous',
-                    mood: form.mood.value,
-                    comments: form.comments.value.trim()
-                };
-
-                try {
-                    const query = new URLSearchParams({
-                        name: data.name,
-                        mood: data.mood,
-                        comments: data.comments
-                    }).toString();
-
-                    const response = await fetch('https://script.google.com/macros/s/AKfycbyNFJqdM9E_LGyxX1Tk9HleYF0cY9LoltAFEY2WM_NC5lnKEqpEqG8DYJoQPd_kYs3H/exec?' + query);
-
-                    if (response.ok) {
-                        form.successMessage.classList.remove('hidden');
-                        form.name.value = '';
-                        form.mood.value = '';
-                        form.comments.value = '';
-                        moodButtons.forEach(btn => btn.classList.remove('selected'));
-                        setTimeout(() => form.successMessage.classList.add('hidden'), 3000);
-                    } else {
-                        form.errorMessage.classList.remove('hidden');
-                    }
-                } catch (error) {
-                    console.error(error);
-                    form.errorMessage.classList.remove('hidden');
-                }
-            }
-        });
-    </script>
+          if (response.ok) {
+            form.successMessage.classList.remove('hidden');
+            form.name.value = '';
+            form.mood.value = '';
+            form.comments.value = '';
+            moodButtons.forEach(btn => btn.classList.remove('selected'));
+            setTimeout(() => form.successMessage.classList.add('hidden'), 3000);
+          } else {
+            form.errorMessage.classList.remove('hidden');
+          }
+        } catch (error) {
+          form.errorMessage.classList.remove('hidden');
+        }
+      }
+    });
+  </script>
 </body>
 </html>
