--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             method: 'POST',
             headers: {
               'Content-Type': 'application/json'
+              "Authorization": "pwyav7po06boi"
             },
             body: JSON.stringify({ data })
           });
