--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
           const response = await fetch('https://sheetdb.io/api/v1/pwyav7po06boi', {
             method: 'POST',
             headers: {
-              'Content-Type': 'application/json'
-              "Authorization": "pwyav7po06boi"
+              'Content-Type': 'application/json',
+              "Authorization": "https://sheetdb.io/api/v1/pwyav7po06boi"
             },
             body: JSON.stringify({ data })
           });
