--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         };
 
         try {
-          const response = await fetch("https://airtable.com/appl3fbuiFgmdr0yG/api/docs", {
+          const response = await fetch("https://api.airtable.com/v0/appl3fbuiFgmdr0yG/Feedback", {
             method: 'POST',
             headers: {
               "Authorization": "Bearer patzXHbmnyeMuNt9x.4979d652aab85e9cac91946d2916a62f684b4bd53f4af2578d6140343cf2925f",
@@ -142,6 +142,23 @@
         }
       }
     });
+
+        if (response.ok) {
+        form.successMessage.classList.remove('hidden');
+        form.name.value = '';
+        form.mood.value = '';
+        form.comments.value = '';
+        moodButtons.forEach(btn => btn.classList.remove('selected'));
+        setTimeout(() => form.successMessage.classList.add('hidden'), 3000);
+      } else {
+        form.errorMessage.classList.remove('hidden');
+      }
+    } catch (error) {
+      form.errorMessage.classList.remove('hidden');
+      console.error("Error:", error);
+    }
+  }
+});
   </script>
 </body>
 </html>
