--- a/index.html
+++ b/index.html
@@ -48,115 +48,86 @@
   <div class="bg-white rounded-2xl shadow-xl p-6 sm:p-8 w-full max-w-lg">
     <h1 class="text-3xl font-bold text-indigo-800 mb-4 text-center">Share Your Vibe!</h1>
     <p class="text-gray-600 text-center mb-6">Tell us how you're feeling today.</p>
-    <div class="space-y-8">
-      <div>
-        <label for="name" class="block text-lg font-medium text-indigo-700 mb-2">What's your name?</label>
-        <input type="text" id="name" class="block w-full px-4 py-3 rounded-lg border border-gray-300 text-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-500 sm:text-base" placeholder="Your name (optional)" />
-      </div>
-      <div class="text-center">
-        <p class="text-lg font-medium text-indigo-700 mb-3">What's your mood?</p>
-        <div class="flex justify-center gap-6 sm:gap-8">
-          <button type="button" class="mood-btn bad p-3" data-mood="Bad" title="Bad">😞</button>
-          <button type="button" class="mood-btn meh p-3" data-mood="Meh" title="Meh">😐</button>
-          <button type="button" class="mood-btn good p-3" data-mood="Good" title="Good">😊</button>
+
+    <form action="https://formspree.io/f/mwpbgqoz" method="POST" id="vibe-form">
+      <div class="space-y-8">
+        <div>
+          <label for="name" class="block text-lg font-medium text-indigo-700 mb-2">What's your name?</label>
+          <input type="text" id="name" class="block w-full px-4 py-3 rounded-lg border border-gray-300 text-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-500 sm:text-base" placeholder="Your name (optional)" />
+          <input type="hidden" name="name" id="form-name">
         </div>
-        <p id="mood-error" class="error-message hidden text-center">Please pick a mood!</p>
-        <input type="hidden" id="mood" name="mood" />
+
+        <div class="text-center">
+          <p class="text-lg font-medium text-indigo-700 mb-3">What's your mood?</p>
+          <div class="flex justify-center gap-6 sm:gap-8">
+            <button type="button" class="mood-btn bad p-3" data-mood="Bad" title="Bad">😞</button>
+            <button type="button" class="mood-btn meh p-3" data-mood="Meh" title="Meh">😐</button>
+            <button type="button" class="mood-btn good p-3" data-mood="Good" title="Good">😊</button>
+          </div>
+          <p id="mood-error" class="error-message hidden text-center">Please pick a mood!</p>
+          <input type="hidden" name="mood" id="form-mood" />
+        </div>
+
+        <div>
+          <label for="comments" class="block text-lg font-medium text-indigo-700 mb-2">What's on your mind?</label>
+          <textarea id="comments" rows="4" class="comment-box block w-full px-4 py-3 rounded-lg border border-gray-300 text-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-500 sm:text-base" placeholder="Share your thoughts..."></textarea>
+          <p id="comments-error" class="error-message hidden">Please share your thoughts!</p>
+          <input type="hidden" name="comments" id="form-comments" />
+        </div>
+
+        <button id="submit-btn" type="submit" class="submit-btn w-full text-white py-3 px-6 rounded-lg font-semibold text-lg focus:outline-none focus:ring-2 focus:ring-pink-500 focus:ring-offset-2 transition duration-200">Send Your Vibe</button>
       </div>
-      <div>
-        <label for="comments" class="block text-lg font-medium text-indigo-700 mb-2">What's on your mind?</label>
-        <textarea id="comments" rows="4" class="comment-box block w-full px-4 py-3 rounded-lg border border-gray-300 text-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-500 sm:text-base" placeholder="Share your thoughts..."></textarea>
-        <p id="comments-error" class="error-message hidden">Please share your thoughts!</p>
-      </div>
-      <button id="submit-btn" class="submit-btn w-full text-white py-3 px-6 rounded-lg font-semibold text-lg focus:outline-none focus:ring-2 focus:ring-pink-500 focus:ring-offset-2 transition duration-200">Send Your Vibe</button>
-    </div>
-    <p id="success-message" class="text-green-600 text-center mt-4 font-medium hidden">Thanks for sharing your vibe!</p>
-    <p id="error-message" class="text-red-600 text-center mt-4 font-medium hidden">Failed to submit. Please try again.</p>
+
+      <p id="success-message" class="text-green-600 text-center mt-4 font-medium hidden">Thanks for sharing your vibe!</p>
+      <p id="error-message" class="text-red-600 text-center mt-4 font-medium hidden">Failed to submit. Please try again.</p>
+    </form>
   </div>
 
   <script>
-    const form = {
-      name: document.getElementById('name'),
-      mood: document.getElementById('mood'),
-      comments: document.getElementById('comments'),
-      submitBtn: document.getElementById('submit-btn'),
-      successMessage: document.getElementById('success-message'),
-      errorMessage: document.getElementById('error-message')
-    };
+    const moodButtons = document.querySelectorAll('.mood-btn');
+    const formMood = document.getElementById('form-mood');
+    const formName = document.getElementById('form-name');
+    const formComments = document.getElementById('form-comments');
+    const form = document.getElementById('vibe-form');
 
     const errors = {
       mood: document.getElementById('mood-error'),
       comments: document.getElementById('comments-error')
     };
 
-    const moodButtons = document.querySelectorAll('.mood-btn');
-
     moodButtons.forEach(button => {
       button.addEventListener('click', () => {
         moodButtons.forEach(btn => btn.classList.remove('selected'));
         button.classList.add('selected');
-        form.mood.value = button.dataset.mood;
+        formMood.value = button.dataset.mood;
         errors.mood.classList.add('hidden');
       });
     });
 
-    form.submitBtn.addEventListener('click', async (e) => {
-      e.preventDefault();
+    form.addEventListener('submit', function (e) {
+      const name = document.getElementById('name').value.trim();
+      const comments = document.getElementById('comments').value.trim();
+
+      formName.value = name || "Anonymous";
+      formComments.value = comments;
+
       let hasError = false;
-
       Object.values(errors).forEach(error => error.classList.add('hidden'));
-      form.comments.classList.remove('border-red-500');
-      form.successMessage.classList.add('hidden');
-      form.errorMessage.classList.add('hidden');
+      document.getElementById('comments').classList.remove('border-red-500');
 
-      if (!form.mood.value) {
+      if (!formMood.value) {
         errors.mood.classList.remove('hidden');
         hasError = true;
       }
 
-      if (!form.comments.value.trim()) {
+      if (!comments) {
         errors.comments.classList.remove('hidden');
-        form.comments.classList.add('border-red-500');
+        document.getElementById('comments').classList.add('border-red-500');
         hasError = true;
       }
 
-      if (!hasError) {
-        const data = {
-          name: form.name.value.trim() || 'Anonymous',
-          mood: form.mood.value,
-          comments: form.comments.value.trim()
-        };
-
-        try {
-          const response = await fetch("https://api.airtable.com/v0/appl3fbuiFgmdr0yG/Feedback", {
-            method: 'POST',
-            headers: {
-              "Authorization": "Bearer patzXHbmnyeMuNt9x.4979d652aab85e9cac91946d2916a62f684b4bd53f4af2578d6140343cf2925f",
-              "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-              fields: {
-                Name: data.name,
-                Mood: data.mood,
-                Comments: data.comments
-              }
-            })
-          });
-
-          if (response.ok) {
-            form.successMessage.classList.remove('hidden');
-            form.name.value = '';
-            form.mood.value = '';
-            form.comments.value = '';
-            moodButtons.forEach(btn => btn.classList.remove('selected'));
-            setTimeout(() => form.successMessage.classList.add('hidden'), 3000);
-          } else {
-            form.errorMessage.classList.remove('hidden');
-          }
-        } catch (error) {
-          form.errorMessage.classList.remove('hidden');
-          console.error("Error:", error);
-        }
+      if (hasError) {
+        e.preventDefault();
       }
     });
   </script>
